@@ -1160,8 +1160,8 @@
 (display "\r")(let1 val (begin (format "~a" 1)) (if (equal? '"1" val) (format #t " Running ~d/~d" 1550 1944) (begin (add-error '((format "~a" 1)) '"1" val))))
 (display "\r")(let1 val (begin (format "~a" +1i)) (if (equal? '"+1i" val) (format #t " Running ~d/~d" 1551 1944) (begin (add-error '((format "~a" +1i)) '"+1i" val))))
 (display "\r")(let1 val (begin (format "~a" +inf.0i)) (if (equal? '"+inf.0i" val) (format #t " Running ~d/~d" 1552 1944) (begin (add-error '((format "~a" +inf.0i)) '"+inf.0i" val))))
-(display "\r")(let1 val (begin (almost=? 1 (real-part 1.0003421491941404+1.7318532225756456i))) (if (equal? '#t val) (format #t " Running ~d/~d" 1553 1944) (begin (add-error '((almost=? 1 (real-part 1.0003421491941404+1.7318532225756456i))) '#t val))))
-(display "\r")(let1 val (begin (almost=? -1 (real-part -0.9998352733010797+1.7321459021291927i))) (if (equal? '#t val) (format #t " Running ~d/~d" 1554 1944) (begin (add-error '((almost=? -1 (real-part -0.9998352733010797+1.7321459021291927i))) '#t val))))
+(display "\r")(let1 val (begin (almost=? 1 (real-part 1.0003421491941402+1.7318532225756456i))) (if (equal? '#t val) (format #t " Running ~d/~d" 1553 1944) (begin (add-error '((almost=? 1 (real-part 1.0003421491941402+1.7318532225756456i))) '#t val))))
+(display "\r")(let1 val (begin (almost=? -1 (real-part -0.9998352733010798+1.7321459021291927i))) (if (equal? '#t val) (format #t " Running ~d/~d" 1554 1944) (begin (add-error '((almost=? -1 (real-part -0.9998352733010798+1.7321459021291927i))) '#t val))))
 (display "\r")(let1 val (begin 1) (if (equal? '1 val) (format #t " Running ~d/~d" 1555 1944) (begin (add-error '(1) '1 val))))
 (display "\r")(let1 val (begin 0) (if (equal? '0 val) (format #t " Running ~d/~d" 1556 1944) (begin (add-error '(0) '0 val))))
 (display "\r")(let1 val (begin 1) (if (equal? '1 val) (format #t " Running ~d/~d" 1557 1944) (begin (add-error '(1) '1 val))))
