@@ -273,6 +273,13 @@
       (test-true (pointer? callback))
       (test-equal #x1234567887654322 (callCallback callback))))
 
+  (let ()
+    (define libffitest (open-shared-library "./libffitest.so.1.0"))
+    (define callCallback (c-function libffitest int64_t callCallback5 callback))
+    (let ([callback (c-callback int64_t (int64_t) (lambda (i) (+ i 1)))])
+      (test-true (pointer? callback))
+      (test-equal #x1234567887654322 (callCallback callback))))
+
 
 ;
 ) ;; when
